--- a/Cap09/Cap09.ini
+++ b/Cap09/Cap09.ini
@@ -1,8 +1,8 @@
 [DescrPGN]
-Usage=9
-Access=1033352
+Usage=14
+Access=1033373
 [Environ]
-LastUser=Jodar Arias
+LastUser=Doe
 TournTitle=
 TournPlace=
 LastPlayer=A
@@ -28,6 +28,6 @@ TotalPoints=0
 ReachedPoints=0
 LastListTop=0
 LastSelected=0
-QLstSelected=4
-Usage=10
+QLstSelected=0
+Usage=13
 AlwaysNewTextWind=1
