--- a/Cap19/Cap19.ini
+++ b/Cap19/Cap19.ini
@@ -1,5 +1,5 @@
 [DescrPGN]
-Usage=19
+Usage=2
 Access=1033373
 [Environ]
 LastUser=Doe
@@ -8,7 +8,7 @@ TournPlace=
 LastPlayer=A
 LastTourn=A
 LastTrnYear=2016
-TournDate=1033216
+TournDate=0
 ListNames=22
 ListTourn=18
 ListFirstNm=15
@@ -29,5 +29,5 @@ ReachedPoints=0
 LastListTop=0
 LastSelected=0
 QLstSelected=0
-Usage=10
+Usage=3
 AlwaysNewTextWind=1
