--- a/Cap01/Cap01.ini
+++ b/Cap01/Cap01.ini
@@ -1,5 +1,7 @@
 [DescrPGN]
-Usage=18
+Type=0
+Title=Cap01.pgn
+Usage=3
 Access=1033374
 [Environ]
 LastUser=Doe
@@ -20,14 +22,14 @@ Numbers=2
 Sources=1
 Annotators=2
 RandomTraining=1
-bLoadedDBText=2
+bLoadedDBText=1
 AlwaysText=1
 FootLine=1
 FullDate=2
 TotalPoints=0
 ReachedPoints=0
 LastListTop=0
-LastSelected=12
+LastSelected=0
 QLstSelected=0
-Usage=17
+Usage=4
 AlwaysNewTextWind=1
